syntax="proto3";

option go_package="./proto";

package greet_service;

/*
Open 2 terminals for client and server:
Start the server command: go run server/main.go
Start the client command: go run client/main.go
*/

service GreetService{
    rpc SayHello(NoParam) returns (HelloResponse);
    rpc SayHelloServerStreaming(NamesList) returns  (stream HelloResponse);
    rpc SayHelloClientStreaming(stream HelloRequest) returns (MessageList);
    rpc SayHelloBiDiStreaming(stream HelloRequest) returns (stream HelloResponse);
}

message NoParam{};

message HelloRequest{
    string name = 1;
}
message HelloResponse   {
    string message = 1;
}

message NamesList{
    repeated string names = 1;
}

message MessageList{
    repeated string messages = 1;
}
